Se actualiza el POM

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,13 @@
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <repositories>
+        <repository>
+            <id>Maven</id>
+            <url>https://mvnrepository.com/</url>
+        </repository>
+    </repositories>
     
     <dependencies>
         <dependency>
