--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     <repositories>
         <repository>
             <id>Maven</id>
-            <url>https://mvnrepository.com/</url>
+            <url>https://repo1.maven.org</url>
         </repository>
     </repositories>
     
