--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,8 @@
 
     <repositories>
         <repository>
-            <id>Maven</id>
-            <url>https://repo1.maven.org/maven2</url>
+            <id>central</id>
+            <url>https://repo1.maven.org/maven2/</url>
         </repository>
     </repositories>
     
