Se actualiza el POM 5

--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,8 @@
 
     <repositories>
         <repository>
-            <id>central</id>
-            <url>https://repo1.maven.org/maven2/</url>
+            <id>java-net-repo</id>
+            <url>https://maven.java.net/content/repositories/public/</url>
         </repository>
     </repositories>
     
